--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -56,12 +56,12 @@ What is to be investigated in this study is that the amount and type ( and maybe
 Collagen development, secondary follicle development and wrinkle formation  all seem to commence at the same time of around 100 days of foetal age.  Follicle development ceases at around birth ( 150 days) but development of collagen and wrinkles continues into the adult sheep. In this study we look at the end points of development - that is we study collagen and follicles in adult sheep with and without wrinkles. That will not reveal the details of development, but it should make clear any obvious associations between collagen, wrinkles, and follicles.
 
 \section{Materials and Methods}
-The experimental design was to choose, by visual inspection, individual sheep with wrinkle-free skin and wrinkly skin from each of a number of Australian Merino flocks. The flocks available for this study were mostly flocks which were undergoing breeding towards the SRS \textsuperscript{TM} Merino type. Consequently most of the sheep chosen as examples of wrinkle-free sheep would have the loose and supple skin which is characteristic of SRS \textsuperscript{TM} Merinos. There is another sort of wrinkle-free sheep which has low follicle density and tight skin and this type is probably not well represented in the present study.
+The experimental design was to choose, by visual inspection, individual sheep with wrinkle-free skin and wrinkly skin from each of a number of Australian Merino flocks. The flocks available for this study were mostly flocks which were undergoing breeding towards the SRS(R) Merino type. Consequently most of the sheep chosen as examples of wrinkle-free sheep would have the loose and supple skin which is characteristic of SRS Merinos. There is another sort of wrinkle-free sheep which has low follicle density and tight skin and this type is probably not well represented in the present study.
 
 Two trials were conducted
 \begin{description}
 \item[Trial 1]  Two sheep were chosen from each of six Merino flocks, one wrinkle-free and one wrinkles. This is a randomized block design without replication .  The blocks are the five flocks, and the treatment is the presence or absence of wrinkle.
-\item[Trial 2]  Eighteen sheep were chosen from each of two flocks, nine wrinkle-free and nine with wrinkles. This is a randomised block design with replication. The second of these two flocks was more wrinkled and was not breeding towards the SRS \textsuperscript{TM} Merino type.
+\item[Trial 2]  Eighteen sheep were chosen from each of two flocks, nine wrinkle-free and nine with wrinkles. This is a randomised block design with replication. The second of these two flocks was more wrinkled and was not breeding towards the SRS Merino type.
 \end{description} 
 \subsection{Skin samples}
 In Trial 1 a biopsy sample was taken from the midside position on each sheep and the specimens were trimmed in the normal manner before processing, so that only Layer 1 (epidermis) and Layer 2 (papillary dermis) were present for histological observation.
