--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -465,17 +465,11 @@ One way to avoid this selection issue would be to select directly for Type 3 col
 
 
 \section{Conclusion}
-\begin{verbatim}
-Roughly I want to say that we understand how wrinkles form as an
- interaction between two skin layers growing at different rates
- and bound together to various degrees by various grades of collagen.
+ In Merino sheep, skin wrinkles or folds form as a result of an interaction between two skin layers ( dermis and subdermis) growing at different rates, and bound together to various degrees by different grades of collagen.  We suggest that the upper dermis grows faster than other skin layers in wrinkled Merino sheep, because of the presence of large numbers of secondary follicles. 
 
-Then I want to say that this understanding might help with breeding
- of wrinkle-free Merinos.
+One can breed a wrinkle-free Merino by reducing the number of secondary follicles, but that would impact adversely on wool production.  An alternative seems to be to breed wrinkle-free Merinos by changing the type of collagen, so that the expanding upper dermis is not strongly bound to the slower growing subdermal tissue layers.
 
-Then I want to comment that understanding the effect of collagen 
-on follicle curvature is a bonus spinoff from the wrinkle study. 
-\end{verbatim}
+Changing the collagen type would also have a side-effect of reducing follicle curvature.
 
 
 
