tidy up inline messages, get layers consistent

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -13,7 +13,7 @@
 
 \title{Histology of collagen in Merino sheep skin and its association with skin wrinkle formation and follicle curvature }
 \author{The late J.E. Watts S. Maleki, P.G. Swan, J. Gordon, and N. Jackson}
-\date{24 Jan 2020} 
+\date{27 Jan 2020} 
 
  
 \begin{document} 
@@ -64,9 +64,9 @@ Two trials were conducted
 \item[Trial 2]  Eighteen sheep were chosen from each of two flocks, nine wrinkle-free and nine with wrinkles. This is a randomised block design with replication. The second of these two flocks was more wrinkled and was not breeding towards the SRS Merino type.
 \end{description} 
 \subsection{Skin samples}
-In Trial 1 a biopsy sample was taken from the midside position on each sheep and the specimens were trimmed in the normal manner before processing, so that only Layer 1 (epidermis) and Layer 2 (papillary dermis) were present for histological observation.
+In Trial 1 a biopsy sample was taken from the midside position on each sheep and the specimens were trimmed in the normal manner before processing, so that only Layer 1 (epidermis) and Layer 2 (papillary dermis) and Layer 3 (reticular dermnis) were present for histological observation.
 
-In Trial 2 , for the sheep with wrinkly skins, skin biopsies were collected from on the wrinkles as well as between the wrinkles. For the wrinkle-free sheep only one biopsy sample was collected. These specimens included Layers 1 to 4, ie only the adipose tissue was trimmed.
+In Trial 2 , for the sheep with wrinkly skins, skin biopsies were collected from on the wrinkles as well as between the wrinkles. For the wrinkle-free sheep only one biopsy sample was collected. These specimens were not trimmed, so included Layers 1 to 3,  and in some cases part of Layers 4 and 5.
 
 Midside skin samples were collected using a 10 millimetre
 circular trephine (Acu Punch® skin biopsy punches, Acuderm, Inc.) and
@@ -185,15 +185,7 @@ The wrinkled sheep has a greater amount of staining in the  connective tissue in
 These differences were consistent across all sheep.
 
 Although the Trial 2 biopsy samples were not trimmed before sectioning, the specimens displayed in Figure~\ref{fig:trial24xhe} do not show any layers below Layer 3. We need to see what connective tissue is present in Layer 4 (muscle layer). 
-\begin{verbatim}
-Sanaz, do you know why these sections have Layer 4 trimmed ? 
-They are from Trial 2, and should be untrimmed.
-The only images of untrimmed samples that I could find were the two below
- which came to me from Jim by email. There are none in his computer files
- which Sally retrieved for me?
-\end{verbatim}
-
-  We can check on this by looking at a specimen , which was not trimmed before sectioning. Figure~\ref{fig:trial2he} shows one example section which is from a wrinkled sheep from Flock 1 of Trial 2.
+  We can check on this by looking at a deeper biopsy specimen which has Layers 4 and 5 intact.   Figure~\ref{fig:trial2he} shows one example section which is from a wrinkled sheep from Flock 1 of Trial 2.
 \input{figtrial2he.tex}
 
 It is clear from Figure~\ref{fig:trial2he} that there is connective tissue in Layer 3 (lower or reticular dermis), then a layer which may be muscle and/or connective tissue, then a wider layer of adipose tissue, and finally another layer of muscle and/or connective tissue.  The muscle layer(s) have only stained with the pink eosin counterstain and do not show the reticular structure of  connective tissue. 
@@ -237,7 +229,7 @@ The actual means and their standard deviations for integrated optical density fo
 \input{tabredpixelodmeans.tex}
 We see that the wrinkle-free sheep actually have a very low amount of collagen in Trial 1. This is probably because the Trial 1 sheep were selected from SRS-Merino stud flocks and those chosen as wrinkle-free were likely to be extreme examples of wrinkle-free sheep, of a type not found in normal Merino flocks. 
 
-The Trial 2 sheep are the opposite. These were from commercial flocks, and here the wrinkled sheep ( either the on-wrinkle or between wrinkle specimens) had a higher amount of collagen than the wrinkled sheep from Trial 1. Again, this simply reflects the fact that more extreme wrinkled sheep were available for selection in rial 2. 
+The Trial 2 sheep are the opposite. These were from commercial flocks, and here the wrinkled sheep ( either the on-wrinkle or between wrinkle specimens) had a higher amount of collagen than the wrinkled sheep from Trial 1. Again, this simply reflects the fact that more extreme wrinkled sheep were available for selection in Trial 2. 
 
 The standard deviations were greater for wrinkled sheep, and greater for on-wrinkle than between-wrinkle specimens. Apparently wrinkled skins are more variable, at least in their collagen density. We did not test whether these differences in standard deviation were significant.
 
@@ -268,7 +260,7 @@ Both types occur together in skin. The strength, elasticity  and flexibility of 
 
 One can distinguish the two Types of collagen simply from the size of the fibrils. For example in  the PSR stained images of Figure~\ref{fig:psr40x} the wrinkled specimen clearly has large bundles of fibrils and therefore a considerable amount of Type I collagen. The wrinkle-free specimen, however has fewer bundled fibrils, and lots of thin individual fibrils. This is also quite obvious in the H-E stained sections of Figures~\ref{fig:he10x} and ~\ref{fig:trial24xhe}.
 
-There is a somewhat contentious technique referred to in the Methods section, which uses polarized light microscopy to attempt to differentiate Type I from Type III collagen.  The collagen fibres are birefringent and it is asserted that they show coloured red, orange, yellow, or green on order of thickness of the bundles of fibrils. Thus, red and orange would be likely to indicate Type I collagen, and yellow and green would be likely to indicate Type III collagen.
+There is a  technique referred to in the Methods section, which uses polarized light microscopy to attempt to differentiate Type I from Type III collagen.  The collagen fibres are birefringent and it is asserted that they show coloured red, orange, yellow, or green on order of thickness of the bundles of fibrils. Thus, red and orange would be likely to indicate Type I collagen, and yellow and green would be likely to indicate Type III collagen.
 
 Figure~\ref{fig:polar} shows two polarized light images under a 4x objective comparing a wrinkled sheep with a wrinkle-free sheep.
 \input{figpolar.tex}
@@ -370,7 +362,7 @@ Perhaps the most important result above is the negative one. There were no histo
 
 We maintain that skin folds are formed the same way as all other tissue folds. A fold forms because some layers of the skin grow faster than other layers.  Any dual layer structure will curve if one layer changes length or area faster than the other layer. A bimetal strip is one example. In biology, curved surfaces are formed by non-allometeric growth. (Thompson(1917)~\cite{thom:17}).
 
-We can identify the layers involved. In the case of large folds, we know from Mitchell et al (1984)~\cite{mitc:84} that a fold contains epidermis, papillary dermis and reticular or lower dermis, but not the muscle and fat layers.  So the two super-layers that differ in growth rate are (a) layers 1,2, 3 together, and (b) layers 4 and 5 together. s sheep mature and large folds form super-layer (a) grows faster.  So why do sheep with large folds have more collagen and more Type 1 (hard) collagen? Because the presence of hard collagen in the lower dermis binds the lower edge of the dermis to the muscle and fat layers below and prevents them from expanding to match the growth of super-layer (a). The collagen binds the boundary beteen super-layers (a) and (b).
+We can identify the layers involved. In the case of large folds, we know from Mitchell et al (1984)~\cite{mitc:84} that a fold contains epidermis, papillary dermis and reticular or lower dermis, but not the muscle and fat layers.  So the two super-layers that differ in growth rate are (a) layers 1,2 together, and (b) layers 4 and 5 together. Layer 3 forms a flexible bond between the above 2 super-layers. As a sheep mature and large folds form,  super-layer (a) grows faster.  So why do sheep with large folds have more collagen and more Type 1 (hard) collagen? Because the presence of hard collagen in the lower dermis binds the upper dermis to the muscle and fat layers below.  The collagen binds the boundary beteen super-layers (a) and (b), in the same way as the rivets in a bimetal strip bind thh two layers of metal. If the rivets are loose, the strip does not curve, if they are tight, it curves.
 
 That is not the whole story of large folds. For large folds to form there has to also be excessive growth of super-layer(a) as the sheep matures. We are not sure whether this excess growth of (a) occurs as a result of maturation of the large number of secondary original follicles in Merinos, or whether it is just a genetic signal to grow more skin. What happens in Merino sheep without large folds is that the excess growth of super-layer (a) still occurs, but super-layer (b)  is not bound by hard collagen at the boundary with super-layer(a), so both layers can expand together and the skin on the sheep feels loose and supple. Other breeds of sheep ( eg British breeds) do not have the excessive growth of super-layer (a) as they mature, so they do not form folds, regardless of whether they have hard collagen. This suggests that the excessive growth of super-layer (a) in Merinos is indeed due to the need to fully develop large numbers of secondary original follicles and their accessory glands. 
 
@@ -403,7 +395,7 @@ Wrinkled and wrinkle-free sheep also differ in follicle density, S/P ratio, diam
 
 Apart from being more curved, follicles in wrinkled sheep are also longer. Both the straight length and the curved length are greater. Also the traditional follicle depth measure, which is the average vertical distance of follicle bulbs below the skin surface, is also larger in wrinkled sheep.  If the presence of collagen makes developing follicles curve, is it possible that it also prolongs their development so that they grow longer? 
 
-There is a biological connection between the development of follicles and the development of collagen. The papilla cells in follicles are differentiated fibroblasts. The fibrocyte cells which produce collagen fibres are also differentiated fibroblasts.  There is an established theory about the way pre-papilla cells distribute to follicle papillae, and the effects this has on follicle density and fibre diameters (Moore et al (1989)~\cite{moor:89}, Moore et al (1998)~\cite{moor:98}). There is no such theory, that we are aware of, for collagen. It may be that the population of fibroblast cells is limited in number at some stages so that a {\em tradeoff} sitauation might exist between follicle development and collagen development. This might explain the lower S/P ratio of wrinkled sheep.
+There is a biological connection between the development of follicles and the development of collagen. The papilla cells in follicles are differentiated fibroblasts. The fibrocyte cells which produce collagen fibres are also differentiated fibroblasts.  There is an established theory about the way pre-papilla cells distribute to follicle papillae, and the effects this has on follicle density and fibre diameters (Moore et al (1989)~\cite{moor:89}, Moore et al (1998)~\cite{moor:98}). There is no such theory, that we are aware of, for collagen. It may be that the population of fibroblast cells is limited in number at some stages so that a {\em tradeoff} situation might exist between follicle development and collagen development. This might explain the lower S/P ratio of wrinkled sheep.
 
 \subsection{Predictions and verifications of hypotheses}
 We can check if the above hypotheses are robust by using them to predict some previously unobserved phenomena. We make a number of predictions and check each in turn against new data.
