fix conclusion and further work

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -450,17 +450,30 @@ We do not have the data to check this directly . It is common knowledge that Dow
 
 Practically nothing is known about breed variation in pin-wrinkle.  We suspect that the Karakul breed may have some form of wrinkle in lambs, but not in adults.   The Karakul does not have a high S/P ratio, but the very curly coat of lambs indicates collagen interfering with follicle development.
 
+\subsection{Further work needed}
+A number of points have arisen which we were not able to fully investigate. 
+\begin{itemize}
+\item the sheep studied are a small sample of Australian Merinos. There is need for a wider study encompassing diverse strains of sheep and a variety of grazing environments
+\item we studied selected extreme individuals.  There is a need to show that a series of wrinkle grades show the same relationships with collagen and with follicle curvature
+\item there are more sophisticated techniques, such as protein immunochemistry, which would help quantify the differences in collagen type
+\item the association of wrinkle pattern over the body with dermatome pattern needs to be investigated and its basis determined.
+\item the role which fibroblast cells play in determining observed differences in collagen quantity and type between wrinkled and wrinkle-free sheep, needs to be investigated
+\item the assertion (made on the basis of their follicle curvature) that Downs wool breeds of sheep have either more collagen or more Type 1 collagen, needs to be checked.
+\end{itemize}
 \subsection{Breeding implications}
 If the two factor wrinkle formation hypothesis is correct, and if wrinkle really does exhibit epistatic variation, then breeding to reduce wrinkle by selection on observed wrinkle scores will have a problem. Such selection would tend to choose both sheep with few secondary follicles ( low dermal expansion) and sheep with Type 3 collagen. Only the latter is desirable, as sheep with few follicles will be poor producers. 
 
-One way to avoid this selection issue would be to select directly for Type 3 collagen by observing loosness and suppleness of the skin.  
+One way to avoid this selection issue would be to select directly for Type 3 collagen. This could be achieved by direct histological measurement of collagen in skin biopsies, or  by observing loosness and suppleness of the skin.  
 
 
 \section{Conclusion}
+ A wrinkle or skin fold in sheep is not a separate organ or tissue. The tissues within a fold are the same as the tissues in flat skin. A fold is simply a curvature of the skin caused by differential growth of skin layers.
+
  In Merino sheep, skin wrinkles or folds form as a result of an interaction between two skin layers ( dermis and subdermis) growing at different rates, and bound together to various degrees by different grades of collagen.  We suggest that the upper dermis grows faster than other skin layers in wrinkled Merino sheep, because of the presence of large numbers of secondary follicles. 
 
-One can breed a wrinkle-free Merino by reducing the number of secondary follicles, but that would impact adversely on wool production.  An alternative seems to be to breed wrinkle-free Merinos by changing the type of collagen, so that the expanding upper dermis is not strongly bound to the slower growing subdermal tissue layers.
+The type of collagen in the lower dermis has a strong association with wrinkle formation, and also with follicle curvature.
 
+One might breed a wrinkle-free Merino by reducing the number of secondary follicles, but that would impact adversely on wool production.  An alternative seems to be to breed wrinkle-free Merinos by changing the type of collagen, so that the expanding upper dermis is not strongly bound to the slower growing subdermal tissue layers.
 Changing the collagen type would also have a side-effect of reducing follicle curvature.
 
 
