--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -500,7 +500,7 @@ Dreyer, J.H., Rossouw, E. and Steyn, M.G. (1983) The histology of the pre-natal 
 Fraser A.S and Short B.F. (1960) The Biology of the Fleece. Animal Research Laboratories Technical Paper No 3. CSIRO Melbourne 1960.
 
 \bibitem{gord:08}
-Gordon-Thompson, C., Botto, S.A., Cam, G.R., and Moore, G.P.H. (2008) Notch pathway gene expression and wool follicle cell fates. Aust. J. Exp. Agric. 48(5) 648-656
+Gordon-Thompson, C., Botto, S.A., Cam, G.R., and Moore, G.P.M. (2008) Notch pathway gene expression and wool follicle cell fates. Aust. J. Exp. Agric. 48(5) 648-656
 
 \bibitem{hard:56}
 Hardy, M.H. and Lyne, A.G. (1956) The pre-natal development of wool follicles in Merino sheep. Aust. J. biol. Sci. 9:423:41
